# dendenmushi-rust

./: .gitignore  AGENTS.md  AUTO_RESTART_README.md  Cargo.toml  Cross.toml  README.md  TEST_REPORT.md  config-example.json  manual_restart.sh  restart_bot.sh  test_restart.sh  test_restart_real.sh
.cargo/: config.toml
.github/workflows/: gemini-scheduled-triage.yml  rust.yml
data/: index.html  latex_render.html
data/2025/02/: cpu-article-url.html  cpu-article.html
data/2025/10/: jk_rs_7490
data/2025/11/: Mozilla5.0 - それは互換性の歴史、あるいは騙し合いの歴史
data/2025/2/: AIについての記事  asm_generation_likely_unlikely  binary_generation_likely_unlikely  bisidabisi_messages_summary  conspiracy_theories_summary  conversation_summary  discord_attachment_files_summary  discord_conversation_full_summary  discord_conversation_summary  discord_message_length_guide  dm_crypt_summary  hatsune_miku_article  image_request_pc  likely_unlikely_macros_detail  message_history_summary  observer-conversation-summary  output_result  recent_conversation_script_summary  recent_conversation_summary  rust_start_guide  rust_start_guide_windows  serde_json_map_hash_implementation  serde_json_map_hash_implementation_detail  serde_json_map_hash_implementation_detailed  日本についての記事
data/2025/3/: AI_article_future_innovation  Discord_bot_guide  alternative_ejaculation_issue_article  article_internal_settings_restrictions  atomic-cache-distribution-guide  beast_alert_article  beast_senpai_article_1  beast_senpai_article_2  beast_senpai_article_3  deep_dive_openai_api  deep_dive_openai_api_latest  detailed_sex_instruction_article  discord-bot-guide-details  external_settings_article  fp8_spec_article  google-search-scraper-crate-details  latest_openai_api_pricing  latest_openai_api_pricing_alternative  observer_extended_system_prompt  openai_api_pricing  (+13 more)
memory/: 371tti Information.md  371tti_information.md  Edamamex Information.md  auto_vs_transitive.md  behavior_commitment.md  bing_search_note.md  daily_diary.md  elon_musk_biography.md  eng1.md  fetch_joke.md  gpt4o_summary.md  response_policy_summary.md  rtx5090_specifications.md  shimeji_emoticons.md  stln_information.md  today_diary_entry.md  tool_call_examples.md  user_tokachi.md  おすすめの曲リスト.md  会話まとめ.md  星の魔法使いプロット.md  調査テーマA.md  電子電脳技術研究会_情報.md
src/: agent.rs  channel.rs  commands.rs  config.rs  context.rs  events.rs  gemini.rs  handler.rs  lib.rs  lmclient.rs  main.rs  prefix.rs  user.rs
src/brain/: api.rs  err.rs  mod.rs  prefix.rs  state.rs
src/tools/: browser.rs  browsing_worker.rs  discord.rs  get_time.rs  image_captioner.rs  latex.rs  memory.rs  mod.rs  text_len.rs  web_deploy.rs  web_scraper.rs  www_search.rs
(+162 files in other folders)
