[package]
name = "observer"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
kurosabi = "0.5.4"
tokio = { version = "1.48.0", features = ["io-std", "macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.12.24", features = ["json"] }
openai_dive = "1.3"
async-trait = "0.1.89"
wk-371tti-net-crawler = { path = "../../wk-371tti-net-crawler", features = ["standalone"] }

serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",   # native-tls じゃなく rustls を使う
    "model",
] }

# コマンドフレームワーク
poise = "0.6"
log = "0.4.28"
