[package]
name = "observer"
version = "0.2.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
kurosabi = "0.5.4"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
openai_dive = { version = "=1.3.3", default-features = false, features = ["stream", "rustls-tls", "tokio"] }

async-trait = "0.1.89"
wk-371tti-net-crawler = { git = "https://github.com/371tti/wk-371tti-net-crawler.git", rev = "1bce9491d08d36e0113baf4e1f728cc4f07abec6", default-features = false }

serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",   # native-tls じゃなく rustls を使う
    "model",
] }

# コマンドフレームワーク
poise = "0.6"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
dashmap = "6.1.0"
dotenv = "0.15.0"
anyhow = "1.0.100"
tracing = "0.1.41"
chrono = "0.4.42"
chrono-tz = "0.10.4"

[profile.release]
codegen-units = 1
lto = "off"

[features]
default = []
web-deploy-tool = []

